# Meridian

./: .gitignore  .mcp.json  AGENTS.md  MISSION.md  README.md  context.md  coordination.md  index.html  package-lock.json  package.json  polaris-codex-session-handoff-20260611.md  polaris-v2-ui-reconciliation-note-20260611.md  polaris-v2-ui-repro-handoff-20260611.md  polaris-v2-ui-slice-manifest-20260611.md  pyproject.toml  read-check-report.md  session-replacement-handoff-20260611.md  tmp_polaris_homepage.html  tmp_v2_salvage_test_fix.patch  v2finalharnessassessment.md
.codex/: hooks.json
bifrost/: __init__.py  cockpit.py  preview.html  preview.py
docs/: FileMap.md  _c5_patch.py  _fm_patch.py  _patch_and_commit.py  aegis-relay-summary-handoff-contract.md  agentic-ai-framework-checklist.md  atlas-retrieval-contract.md  backlog-authority-contract.md  backlog.json  bifrost-balance-payload-surface-contract.md  bifrost-configurable-progress-surface-brief.md  bifrost-harness-dashboard-brief.md  bifrost-preview-package-api-note.md  bifrost-right-panel-mode-contract.md  bifrost-v0-cockpit-layout-brief.md  bifrost-v2-cockpit-extensions.md  bifrost-voice-command-contract.md  build-1-filemap-knowledge-tracker-handoff.md  build-1-harness-maturity-handoff.md  build-and-harness-maturity-brief.md  build-session-polling-bootstrap.md  claude-handoff-completion-protocol.md  claude-next-slice-handoff.md  claude-progress-intention-handoff.md  claude-progress-intention-review-fix.md  claude-relay-routing-handoff.md  claude-risk-tier-engine-handoff.md  cross-check-authority-contract.md  (+95 more)
(+141 files in other folders)
