[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-core"
version = "0.1.0"
description = "Meridian local brain skeleton — proactive portfolio orchestrator core"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["meridian_core*"]

[project.scripts]
meridian = "meridian_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
